--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "@tanstack/react-query": "^5.59.19",
     "@tanstack/react-query-devtools": "^5.59.19",
     "@tanstack/react-query-persist-client": "^5.59.19",
+    "@tinymce/tinymce-react": "^5.1.1",
+    "@tiptap/extension-color": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "geopf-extensions-openlayers": "./src/lib/geopf-extensions-openlayers-1.0.0-beta.0-241.tgz",
     "ol": "8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tinymce": "^7.5.1",
     "type-route": "^1.1.0"
   },
   "devDependencies": {
