ci: disable type check in deploy workflow, only vite build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
             - name: Build application
               run: |
                   yarn install --frozen-lockfile
-                  yarn build --base=/react-dsfr-playground-vite/
+                  yarn vite build --base=/react-dsfr-playground-vite/
 
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4
