--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tanstack/react-query-persist-client": "^5.59.19",
     "@tinymce/tinymce-react": "^5.1.1",
     "@tiptap/extension-color": "^2.9.1",
+    "@tiptap/extension-image": "^2.9.1",
+    "@tiptap/extension-link": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
