--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@codegouvfr/react-dsfr": "^1.13.6",
+    "@hookform/resolvers": "^3.9.1",
     "@tanstack/query-sync-storage-persister": "^5.59.17",
     "@tanstack/react-query": "^5.59.19",
     "@tanstack/react-query-devtools": "^5.59.19",
@@ -28,8 +29,11 @@
     "ol": "8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "tinymce": "^7.5.1",
-    "type-route": "^1.1.0"
+    "type-route": "^1.1.0",
+    "validator": "^13.12.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
