--- a/package.json
+++ b/package.json
@@ -13,18 +13,30 @@
   },
   "dependencies": {
     "@codegouvfr/react-dsfr": "^1.13.6",
+    "@emotion/react": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/query-sync-storage-persister": "^5.59.17",
     "@tanstack/react-query": "^5.59.19",
     "@tanstack/react-query-devtools": "^5.59.19",
     "@tanstack/react-query-persist-client": "^5.59.19",
     "@tinymce/tinymce-react": "^5.1.1",
-    "@tiptap/extension-color": "^2.9.1",
-    "@tiptap/extension-image": "^2.9.1",
-    "@tiptap/extension-link": "^2.9.1",
-    "@tiptap/pm": "^2.9.1",
-    "@tiptap/react": "^2.9.1",
-    "@tiptap/starter-kit": "^2.9.1",
+    "@tiptap/extension-color": "^2.10.3",
+    "@tiptap/extension-document": "^2.10.3",
+    "@tiptap/extension-highlight": "^2.10.3",
+    "@tiptap/extension-image": "^2.10.3",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-subscript": "^2.10.3",
+    "@tiptap/extension-superscript": "^2.10.3",
+    "@tiptap/extension-table": "^2.10.3",
+    "@tiptap/extension-table-cell": "^2.10.3",
+    "@tiptap/extension-table-header": "^2.10.3",
+    "@tiptap/extension-table-row": "^2.10.3",
+    "@tiptap/extension-text": "^2.10.3",
+    "@tiptap/extension-text-align": "^2.10.3",
+    "@tiptap/extension-underline": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "@types/node": "^22.10.2",
     "geopf-extensions-openlayers": "^1.0.0-beta.0",
     "ol": "8.2.0",
@@ -32,6 +44,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "tinymce": "^7.5.1",
+    "tss-react": "^4.9.14",
     "type-route": "^1.1.0",
     "validator": "^13.12.0",
     "yup": "^1.4.0"
