--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "tinymce": "^7.5.1",
+    "tiptap-markdown": "^0.8.10",
     "tss-react": "^4.9.14",
     "type-route": "^1.1.0",
     "validator": "^13.12.0",
