--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^5.59.19",
     "@tanstack/react-query-persist-client": "^5.59.19",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@tiptap/core": "^2.10.3",
     "@tiptap/extension-color": "^2.10.3",
     "@tiptap/extension-document": "^2.10.3",
     "@tiptap/extension-highlight": "^2.10.3",
@@ -34,6 +35,7 @@
     "@tiptap/extension-text": "^2.10.3",
     "@tiptap/extension-text-align": "^2.10.3",
     "@tiptap/extension-underline": "^2.10.3",
+    "@tiptap/extension-youtube": "^2.10.3",
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
