--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "tss-react": "^4.9.14",
     "type-route": "^1.1.0",
     "validator": "^13.12.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "@ignf/react-dsfr-tiptap": "./ignf-react-dsfr-tiptap-0.0.0.tgz"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
